zhe shi xie gei tao zi wei xiao ke ai de xiao li wu!

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <div class="outer clearfix">
         <div class="photo">
           <div>
-            <img src="img/005.jpg" />
+            <img src="img/5.jpg" />
           </div>
         </div>
         <div class="content-wapper clearfix">
-          <span>送给刘伟丽小可爱的小礼物</span>
+          <span>送给小可爱的小礼物</span>
           <div class="content clearfix">
             <div class="galss">我</div>
             <div class="galss">喜</div>
@@ -25,23 +25,23 @@
             <div class="galss">你</div>
             <div class="box1">
               <div>
-                <img src="img/001.jpg" />
+                <img src="img/1.jpg" />
               </div>
               <div>
-                <img src="img/002.jpg" />
+                <img src="img/2.jpg" />
               </div>
               <div>
-                <img src="img/003.jpg" />
+                <img src="img/3.jpg" />
                 <div class="manyangyang"></div>
               </div>
               <div>
-                <img src="img/004.jpg" />
+                <img src="img/4.jpg" />
               </div>
               <div>
-                <img src="img/005.jpg" />
+                <img src="img/5.jpg" />
               </div>
               <div>
-                <img src="img/006.jpg" />
+                <img src="img/6.jpg" />
               </div>
             </div>
           </div>
