--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <div class="outer-wapper clearfix">
       <div class="outer clearfix">
         <div class="photo">
-          <div>
+         <!-- <div>
             <img src="img/5.jpg" />
-          </div>
+          </div> -->
         </div>
         <div class="content-wapper clearfix">
-          <span>送给小可爱的小礼物</span>
+          <span>我的小宝贝圣诞节快乐</span>
+		  <div class="dianwo">
+		  	点我
+		  </div>
           <div class="content clearfix">
             <div class="galss">我</div>
             <div class="galss">喜</div>
