--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		  	点我
 		  </div>
           <div class="content clearfix">
-            <div class="galss">我</div>
-            <div class="galss">喜</div>
-            <div class="galss">欢</div>
+            <div class="galss">永</div>
+            <div class="galss">远</div>
+            <div class="galss">爱</div>
             <div class="galss">你</div>
             <div class="box1">
               <div>
